@startuml
abstract class Ressource{
  code:Integer {key}
  titre:String
  date_apparition:Date
  editeur:String
  genre:String
  code_classification:String
}


together {
  class Livre{
  ISBN:String {key}
  resume:String
  langue:String
}

class Film{
  langue:String
  longueur:Time
  synopsis:String
}

class OeuvreMusicale{
  longueur:Time
}
}
skinparam groupInheritance 2
Ressource <|-- Livre
Ressource <|-- Film
Ressource <|-- OeuvreMusicale

class MembrePersonnel{
  login:String {key}
  mdp:String
  nom:String
  prenom:String
  code_postal:String
  adresse_rue:String
  ville:String
  addresse_mail:String
}

class Adherent{
  login:String {key}
  mdp:String
  nom:String
  prenom:String
  date_naissance:Date
  code_postal:String
  adresse_rue:String
  ville:String
  addresse_mail:String
  num_tel:String
  actif:Bool
  droit_emprunt:Bool
}

class Contributeur{
  nom:String
  prenom:String
  date_naissance:Date
  nationalite:String
}

class Exemplaire{
  etat:{neuf,bon,abîmé,perdu}
  disponible:Bool
}


class Emprunt{
  date_pret:Date {local key}
  date_retour:Date
  date_rendu:Date
}

abstract class Sanction{
}

together {
  class Retard{
    fin():Bool
  }
  class Déterioration{
    remboursement : Bool
  }
}

skinparam groupInheritance 2
Sanction <|-- Retard
Sanction <|-- Déterioration


Exemplaire "1..n" -- "1" Ressource : appartient >
Emprunt "*" -- "0..1" Sanction : imposer >

MembrePersonnel "1" -- "*" Emprunt : gère >
MembrePersonnel "1" -- "*" Sanction : gère >


Contributeur "1..n" -up- "*" Livre : est l'auteur du >
Contributeur "1..n" -up- "*" Film : est réalisateur du >
Contributeur "1..n" -up- "*" Film : est acteur dans >
Contributeur "1..n" -up- "*" OeuvreMusicale : compose une >
Contributeur "1..n" -up- "*" OeuvreMusicale : interprète une >

Adherent "1" -- "*" Emprunt : effectuer >
Emprunt "*" -- "1" Exemplaire : nécessite >




@enduml


